--- a/locale/lt_LT/LC_MESSAGES/messages.po
+++ b/locale/lt_LT/LC_MESSAGES/messages.po
@@ -1826,11 +1826,11 @@ msgstr "Please provide a password"
 
 #: templates/default/login.html:27
 msgid "Language"
-msgstr "Language"
+msgstr "Kalba"
 
 #: templates/default/login.html:34
 msgid "Go"
-msgstr "Go"
+msgstr "Prisijungti"
 
 #: templates/default/batch_ptr_record.html:27
 msgid "Create multiple PTR (reverse DNS) records at once for an IP range"
