--- a/locale/cs_CZ/LC_MESSAGES/messages.po
+++ b/locale/cs_CZ/LC_MESSAGES/messages.po
@@ -1825,11 +1825,11 @@ msgstr "Please provide a password"
 
 #: templates/default/login.html:27
 msgid "Language"
-msgstr "Language"
+msgstr "Jazyk"
 
 #: templates/default/login.html:34
 msgid "Go"
-msgstr "Go"
+msgstr "Přihlásit se"
 
 #: templates/default/batch_ptr_record.html:27
 msgid "Create multiple PTR (reverse DNS) records at once for an IP range"
