--- a/locale/es_ES/LC_MESSAGES/messages.po
+++ b/locale/es_ES/LC_MESSAGES/messages.po
@@ -3,7 +3,6 @@
 # This file is distributed under the same license as the Poweradmin package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
@@ -16,6 +15,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: lib/AppInitializer.php:80
 msgid ""
@@ -33,8 +33,8 @@ msgid ""
 "The <a href=\"install/\">install/</a> directory exists, you must remove it "
 "first before proceeding."
 msgstr ""
-"El <a href=\"install/\">directorio install/</a> existe, debe eliminarlo "
-"primero antes de continuar."
+"El directorio <a href=\"install/\">install/</a> existe, debe eliminarlo "
+"antes de continuar."
 
 #: lib/BaseController.php:525
 msgid ""
