--- a/locale/lt_LT/LC_MESSAGES/messages.po
+++ b/locale/lt_LT/LC_MESSAGES/messages.po
@@ -11,10 +11,11 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: en_EN\n"
+"Language: lt_LT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: lib/AppInitializer.php:80
 msgid ""
@@ -33,7 +34,6 @@ msgid ""
 "first before proceeding."
 msgstr ""
 "<a href=\"install/\">install/</a> katalogas egzistuoja, prieš tęsiant turite jį pašalinti."
-"first before proceeding."
 
 #: lib/BaseController.php:525
 msgid ""
@@ -446,15 +446,17 @@ msgstr "Neteisingas užklausos metodas."
 #, php-format
 msgid "%d zone has been unlinked from template successfully."
 msgid_plural "%d zones have been unlinked from template successfully."
-msgstr[0] "%d zonų sėkmingai atjungtos nuo šablono."
-msgstr[1] "%d zona sėkmingai atjungta nuo šablono."
+msgstr[0] "%d zona sėkmingai atjungta nuo šablono."
+msgstr[1] "%d zonos sėkmingai atjungtos nuo šablono."
+msgstr[2] "%d zonų sėkmingai atjungtos nuo šablono."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:108
 #, php-format
 msgid "%d zone could not be unlinked."
 msgid_plural "%d zones could not be unlinked."
-msgstr[0] "%d zonų nepavyko atjungti."
+msgstr[0] "%d zonos nepavyko atjungti."
 msgstr[1] "%d zonos nepavyko atjungti."
+msgstr[2] "%d zonų nepavyko atjungti."
 
 #: lib/Application/Controller/UnlinkZonesTemplController.php:118
 msgid "Failed to unlink zones from template."
